# ncbitax2lin

./: .gitattributes  .gitignore  .python-version  CHANGELOG.md  LICENSE.txt  Makefile  README.md  env-conda.txt  env-pip.txt  lineages.csv.gz.md5  mypy.ini  ncbitax2lin.py  pylintrc  pyproject.toml  tox.ini  utils.py
.github/workflows/: python-package.yml
ncbitax2lin/: __init__.py  data_io.py  fmt.py  lineage.py  ncbitax2lin.py  struct.py  utils.py
taxdump/: Makefile  taxdump_readme.txt
taxdump/taxdump/: citations.dmp  delnodes.dmp  division.dmp  gc.prt  gencode.dmp  merged.dmp  names.dmp  nodes.dmp
tests/: test___init__.py  test_data_io.py  test_fmt.py  test_lineage.py  test_ncbitax2lin.py  test_utils.py
tests/test_data/: names.head_20.dmp  nodes.head_20.dmp
