[tool.poetry]
name = "ncbitax2lin"
version = "2.0.3"
description = "A tool that converts NCBI taxonomy dump into lineages"
authors = ["Zhuyi Xue <zhuyi.xue2013@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/zyxue/ncbitax2lin"
license = "MIT"

[tool.poetry.dependencies]
fire = "^0.3.1"
pandas = "^1.0.3"
python = "^3.7"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^19.10b0"
isort = "^5.7.0"
mypy = "^0.770"
pylint = "^2.5.0"
pytest = "^5.2"
tox = "^3.21.4"

[tool.poetry.scripts]
ncbitax2lin = "ncbitax2lin.ncbitax2lin:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
