[tool.poetry]
name = "ncbitax2lin"
version = "2.4.1"
description = "A tool that converts NCBI taxonomy dump into lineages"
authors = ["Zhuyi Xue <zhuyi.xue@alum.utoronto.ca>"]
readme = "README.md"
homepage = "https://github.com/zyxue/ncbitax2lin"
license = "MIT"

[tool.poetry.dependencies]
fire = "^0.3.1"
pandas = "^1.0.3"
python = "^3.7,<3.10"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^22.1.0"
coverage = "^5.4"
isort = "^5.7.0"
mypy = "^0.941"
pylint = "^2.5.0"
pytest = "^5.2"
pytest-parallel = "^0.1.0"
tox = "^3.21.4"

[tool.poetry.scripts]
ncbitax2lin = "ncbitax2lin.ncbitax2lin:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["ncbitax2lin"]